--- a/package.json
+++ b/package.json
@@ -38,13 +38,16 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.26",
     "@swimlane/ngx-charts": "5.2.0",
     "angular2-chartjs": "^0.3.0",
+    "angular2-image-upload": "^1.0.0-rc.0",
     "angular2-toaster": "4.0.0",
+    "angular4-files-upload": "^1.0.2",
     "bootstrap": "4.0.0-alpha.6",
     "chart.js": "2.5.0",
     "ckeditor": "4.6.2",
     "classlist.js": "1.1.20150312",
     "core-js": "2.4.1",
     "d3": "4.8.0",
+    "file-saver": "^1.3.3",
     "font-awesome": "4.7.0",
     "intl": "1.2.5",
     "ionicons": "2.0.1",
