--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "@agm/core": "1.0.0-beta.0",
     "@angular/animations": "4.3.2",
+    "@angular/cdk": "^2.0.0-beta.10",
     "@angular/common": "4.3.2",
     "@angular/compiler": "4.3.2",
     "@angular/core": "4.3.2",
     "@angular/forms": "4.3.2",
     "@angular/http": "4.3.2",
+    "@angular/material": "^2.0.0-beta.10",
     "@angular/platform-browser": "4.3.2",
     "@angular/platform-browser-dynamic": "4.3.2",
     "@angular/router": "4.3.2",
